# wordlesolver

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  package-lock.json  package.json  tailwind.config.js
public/: index.html  manifest.json
src/: App.js  EndScreenGrid.js  index.css  index.js  service-worker.js
src/components/: EndScreenGrid.js  Header.js  History.js
src/components/blockedwords/: AddWord.js  BlockedWords.js  Words.js
src/components/editor/: Cell.js  CorrectnessPicker.js  Editor.js  Key.js  Keyboard.js  WordPad.js
src/components/hardmode/: HardModeSwitch.js  SettingsToggle.js
src/components/navigation/: BottomNavigation.js  RoundedButton.js
src/context/: AppReducer.js  GlobalState.js
src/workers/: solver.js
wasm-lib/: Cargo.toml  build.rs
wasm-lib/pkg/: package.json  wasm_lib.d.ts  wasm_lib.js  wasm_lib_bg.wasm  wasm_lib_bg.wasm.d.ts
wasm-lib/src/: algorithm.rs  helper.rs  lib.rs
