[package]
name = "wasm-lib"
version = "0.1.0"
edition = "2021"
description = "Web Wordle solver Wasm library"
repository = "https://github.com/tropicbliss/wordlesolver"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
phf = { version = "0.11", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wee_alloc = { version = "0.4", optional = true }

[build-dependencies]
phf_codegen = "0.11"

[profile.release]
opt-level = "s"
