[package]
name = "wasm-lib"
version = "0.1.0"
edition = "2021"
description = "Web Wordle solver Wasm library"
repository = "https://github.com/tropicbliss/wordlesolver"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
phf = { version = "0.11.1", features = ["macros"] }
serde = { version = "1.0.152", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"] }
wee_alloc = { version = "0.4.5", optional = true }

[build-dependencies]
phf_codegen = "0.11.1"

[profile.release]
opt-level = "z"
